--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.8",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
