--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,4 @@ tokio = {version = "1.43.0", features = ["full"]}
 anyhow = "1.0.96"
 thiserror = "2.0.11"
 futures-util = "0.3.31"
+tauri-plugin-store = "2"
