--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
