--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "@types/intl": "^1.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
@@ -27,7 +28,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.3",
     "vite": "^6.0.3"
   }
 }
