--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-store": "^2.2.0",
     "@types/intl": "^1.2.2",
     "clsx": "^2.1.1",
+    "esbuild": "^0.25.0",
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
